Make scrollbar a bit user friendly. BUG:176895
svn path=/trunk/KDE/kdegraphics/gwenview/; revision=897958

--- a/fullscreenthemes/blackglass/style.css
+++ b/fullscreenthemes/blackglass/style.css
@@ -178,7 +178,7 @@ QLabel[isTitle=true] {
 
 #thumbnailBarView QScrollBar:horizontal {
 	background-color: transparent;
-	height: 8px;
+	height: 10px;
 	padding: 0 2px 0px 2px;
 	margin: 0 10px 0px 10px;
 }
